SERVER-47582 clearing the oplogTruncateAfterPoint during stepdown must not take the PBWM

(cherry picked from commit da4a8e0e85627d6febd8bce3fd87f221e0ff97c6)